--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,4 +11,10 @@
 html,
 body {
     overflow-x: hidden;
+    cursor: url(./assets/cursor.png) 15 15, auto;
+}
+
+a:hover,
+button:hover {
+    cursor: url(./assets/cursor.png) 15 15, pointer;
 }
